added files for ramfs code

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,50 @@
+top ?= ..
+
+VPATH += $(top)/include/pure64
+VPATH += lib
+VPATH += util
+
+CFLAGS += -I $(top)/include
+
 bootsectors += bootsectors/bmfs_mbr.sys
 bootsectors += bootsectors/pxestart.sys
 bootsectors += bootsectors/multiboot.sys
+
+libfiles += lib/dir.o
+libfiles += lib/file.o
+libfiles += lib/misc.o
+libfiles += lib/path.o
 
 install_files += $(PREFIX)/system/pure64.sys
 install_files += $(PREFIX)/system/bootsectors/bmfs_mbr.sys
 install_files += $(PREFIX)/system/bootsectors/pxestart.sys
 install_files += $(PREFIX)/system/bootsectors/multiboot.sys
 
-.PHONY: all
-all: pure64.sys $(bootsectors)
+targets += util/pure64
+targets += lib/libpure64.a
+targets += pure64.sys
+targets += $(bootsectors)
 
+.PHONY: all
+all: $(targets)
+
+util/pure64: util/pure64.o -lpure64
+
+util/pure64.o: util/pure64.c
+
+lib/libpure64.a: $(libfiles)
+	$(AR) $(ARFLAGS) $@ $^
+
+lib/dir.o: lib/dir.c dir.h file.h misc.h path.h
+
+lib/file.o: lib/file.c file.h misc.h
+
+lib/misc.o: lib/misc.c misc.h
+
+lib/path.o: lib/path.c path.h
+
+.PHONY: install
+install:
 # The dependencies of pure64.sys can
 # be (and should be) generated with
 # the command: nasm -M pure64.asm 1>pure64.mk
@@ -31,6 +66,8 @@ pure64.sys: \
 .PHONY: clean
 clean:
 	$(RM) pure64.sys $(bootsectors)
+	$(RM) $(libfiles) lib/libpure64.a
+	$(RM) util/pure64.o util/pure64
 
 .PHONY: test
 test:
