--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -4,6 +4,11 @@ DESTDIR ?=
 
 PREFIX ?= /usr/local
 
+VPATH += $(top)/src/lib
+
+CFLAGS += -I $(top)/include
+CFLAGS += -g
+
 targets += rc
 targets += pure64
 
@@ -14,19 +19,19 @@ rc: rc.o
 
 rc.o: rc.c
 
-pure64: pure64.o pure64-data.o mbr-data.o
+pure64: pure64.o pure64-data.o mbr-data.o -lpure64
 
 pure64.o: pure64.c pure64-data.h mbr-data.h
 
-mbr-data.o: util/mbr-data.c
+mbr-data.o: mbr-data.c
 
 mbr-data.c mbr-data.h: $(top)/src/bootsectors/bmfs_mbr.sys rc
-	util/rc --input $< --source mbr-data.c --header mbr-data.h --name mbr_data
+	./rc --input $< --source mbr-data.c --header mbr-data.h --name mbr_data
 
-pure64-data.o: util/pure64-data.c
+pure64-data.o: pure64-data.c
 
 pure64-data.c pure64-data.h: $(top)/src/pure64.sys rc
-	util/rc --input $< --source pure64-data.c --header pure64-data.h --name pure64_data
+	./rc --input $< --source pure64-data.c --header pure64-data.h --name pure64_data
 
 .PHONY: clean
 clean:
