--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ CFLAGS += -I $(top)/include
 CFLAGS += -fno-stack-protector
 CFLAGS += -fomit-frame-pointer
 CFLAGS += -mno-red-zone
+CFLAGS += -Os
 CFLAGS += -g
 
 targets += pure64.sys
@@ -25,8 +26,8 @@ pure64files += sysvar.asm
 .PHONY: all
 all: $(targets)
 
-pure64: pure64.o debug.o load.o pure64.ld
-	ld pure64.o debug.o load.o -T pure64.ld -o $@
+pure64: pure64.o ahci.o debug.o load.o pci.o pure64.ld
+	ld pure64.o ahci.o debug.o load.o pci.o -T pure64.ld -o $@
 
 # The dependencies of pure64.sys can
 # be (and should be) generated with
@@ -34,9 +35,13 @@ pure64: pure64.o debug.o load.o pure64.ld
 # and used to update this target.
 pure64.o: $(pure64files)
 
+ahci.o: ahci.c ahci.h pci.h
+
 debug.o: debug.c debug.h
 
-load.o: load.c
+load.o: load.c ahci.h debug.h
+
+pci.o: pci.c pci.h
 
 pure64.sys: pure64
 	objcopy -O binary $< $@
