added hooks.o and -lpure64

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,16 +27,16 @@ pure64objs += pure64.o
 pure64objs += ahci.o
 pure64objs += debug.o
 pure64objs += e820.o
+pure64objs += hooks.o
 pure64objs += load.o
 pure64objs += map.o
 pure64objs += pci.o
-pure64objs += string.o
 
 .PHONY: all
 all: $(targets)
 
 pure64: $(pure64objs) pure64.ld
-	ld $(pure64objs) -T pure64.ld -o $@
+	ld $(pure64objs) -lpure64 -L lib -T pure64.ld -o $@
 
 # The dependencies of pure64.sys can
 # be (and should be) generated with
@@ -55,8 +55,6 @@ load.o: load.c ahci.h debug.h
 map.o: map.c map.h
 
 pci.o: pci.c pci.h
-
-string.o: string.c string.h
 
 pure64.sys: pure64
 	objcopy -O binary $< $@
