added -mno-red-zone and -Os

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -9,8 +9,10 @@ VPATH += $(top)/include/pure64
 CFLAGS += -Wall -Wextra -Werror -Wfatal-errors
 CFLAGS += -std=gnu99
 CFLAGS += -I $(top)/include
+CFLAGS += -mno-red-zone
 CFLAGS += -fno-stack-protector
 CFLAGS += -fomit-frame-pointer
+CFLAGS += -Os
 CFLAGS += -g
 
 ARFLAGS = rcs
