--- a/src/arch/x86_64/Makefile
+++ b/src/arch/x86_64/Makefile
@@ -6,16 +6,24 @@ pure64_deps += init/smp.asm
 pure64_deps += interrupt.asm
 pure64_deps += sysvar.asm
 
+bootsectors += bootsectors/mbr.sys
+bootsectors += bootsectors/multiboot.sys
+bootsectors += bootsectors/multiboot2.sys
+bootsectors += bootsectors/pxestart.sys
+
 .PHONY: all
-all: pure64.sys
+all: pure64.sys $(bootsectors)
 
 pure64.sys: pure64.asm $(pure64_deps)
+
+%.sys: %.asm
 	@echo "NASM    $@"
 	nasm $< -o $@
 
 .PHONY: clean
 clean:
 	$(RM) pure64.sys
+	$(RM) $(bootsectors)
 
 .PHONY: test
 test: all
