finished risc-v bootsector

--- a/src/arch/riscv64/Makefile
+++ b/src/arch/riscv64/Makefile
@@ -1,7 +1,14 @@
+TOP ?= $(PWD)/../../../
+
+OUTDIR ?= .
+
+VPATH += $(OUTDIR)
+
 CROSS_COMPILE=riscv64-none-elf-
 AS=$(CROSS_COMPILE)as
 CC=$(CROSS_COMPILE)gcc
 LD=$(CROSS_COMPILE)ld
+OBJCOPY=$(CROSS_COMPILE)objcopy
 
 ASFLAGS += -g
 
@@ -9,6 +16,7 @@ CFLAGS += -Wall -Wextra -Werror -Wfatal-errors
 CFLAGS += -std=c11
 CFLAGS += -g
 CFLAGS += -ffreestanding
+CFLAGS += -I $(TOP)/include
 
 ifeq (${BOARD},sifive_u500)
 CFLAGS += -DPURE64_BOARD_SIFIVE_U500
@@ -20,34 +28,37 @@ LDFLAGS += -T qemu_virt.ld
 QEMU_MACHINE = virt
 endif
 
-
-pure64_files += _start.o
-pure64_files += main.o
-pure64_files += uart.o
-
 .PHONY: all
-all: pure64
+all: $(OUTDIR)/pure64.sys
 
-pure64: $(pure64_files)
+$(OUTDIR)/pure64.sys: pure64
+	@echo "OBJCOPY $@"
+	$(OBJCOPY) -O binary $< $@
+
+$(OUTDIR)/pure64: pure64.o
+	@echo "LD      $@"
 	$(LD) $(LDFLAGS) $^ -o $@
 
-_start.o: _start.S
+$(OUTDIR)/pure64.o: pure64.S
+	@echo "AS      $@"
+	$(AS) $(ASFLAGS) -c $< -o $@
 
-main.o: main.c uart.h
-
-sifive_u500.o: sifive_u500.c sifive_u500.h
-
-uart.o: uart.c uart.h sifive_u500.h
+$(OUTDIR)/pure64.img: pure64.sys
+	dd if=/dev/zero of=$@ bs=1024 count=1024
+	dd if=$< of=$@ conv=notrunc
 
 .PHONY: clean
 clean:
-	$(RM) pure64
-	$(RM) *.o
+	$(RM) $(OUTDIR)/pure64.sys
+	$(RM) $(OUTDIR)/pure64
+	$(RM) $(OUTDIR)/pure64.o
 
 .PHONY: test
-test:
-	qemu-system-riscv64 -machine $(QEMU_MACHINE) -m 64 -kernel pure64 -serial stdio
+test: pure64.img
+	qemu-system-riscv64 -machine $(QEMU_MACHINE) -m 64 -drive file=pure64.img,format=raw -serial stdio
 
 .PHONY: test_debug
-test_debug:
-	qemu-system-riscv64 -machine $(QEMU_MACHINE) -m 64 -kernel pure64 -serial stdio -s -S
+test_debug: pure64.img
+	qemu-system-riscv64 -machine $(QEMU_MACHINE) -m 64 -drive file=pure64.img,format=raw -serial stdio -s -S
+
+$(V).SILENT:
