--- a/src/arch/x86_64/Makefile
+++ b/src/arch/x86_64/Makefile
@@ -6,29 +6,26 @@ pure64_deps += init/smp.asm
 pure64_deps += interrupt.asm
 pure64_deps += sysvar.asm
 
-bootsectors += bootsectors/mbr.sys
-bootsectors += bootsectors/multiboot.sys
-bootsectors += bootsectors/multiboot2.sys
-bootsectors += bootsectors/pxestart.sys
+pure64_install_dir ?= $(DESTDIR)$(PREFIX)/share/pure64/resources/$(ARCH)
 
 .PHONY: all
-all: pure64.sys $(bootsectors)
+all: pure64.sys
 
 pure64.sys: pure64.asm $(pure64_deps)
 
 %.sys: %.asm
 	@echo "NASM    $@"
-	nasm $< -o $@
 
 .PHONY: clean
 clean:
 	$(RM) pure64.sys
-	$(RM) $(bootsectors)
 
 .PHONY: test
 test: all
 
 .PHONY: install
 install: all
+	mkdir -p $(install_dir)
+	cp pure64.sys $(install_dir)
 
 $(V).SILENT:
