--- a/src/arch/x86_64/bootsectors/Makefile
+++ b/src/arch/x86_64/bootsectors/Makefile
@@ -3,20 +3,36 @@ bootsectors += multiboot.sys
 bootsectors += multiboot2.sys
 bootsectors += pxestart.sys
 
+listfiles += mbr.lst
+listfiles += multiboot.lst
+listfiles += multiboot2.lst
+listfiles += pxestart.lst
+
 install_dir ?= $(DESTDIR)$(PREFIX)/share/pure64/resources/$(ARCH)/bootsectors
 
 .PHONY: all
 all: $(bootsectors)
 
-pure64.sys: pure64.asm $(pure64_deps)
-
-%.sys: %.asm
+mbr.sys: mbr.asm
 	@echo "NASM    $@"
-	nasm $< -o $@
+	nasm $< -o $@ -l mbr.lst
+
+pxestart.sys: pxestart.asm
+	@echo "NASM    $@"
+	nasm $< -o $@ -l pxestart.lst
+
+multiboot.sys: multiboot.asm
+	@echo "NASM    $@"
+	nasm $< -o $@ -l multiboot.lst
+
+multiboot2.sys: multiboot2.asm
+	@echo "NASM    $@"
+	nasm $< -o $@ -l multiboot2.lst
 
 .PHONY: clean
 clean:
 	$(RM) $(bootsectors)
+	$(RM) $(listfiles)
 
 .PHONY: test
 test: all
@@ -25,5 +41,6 @@ test: all
 install: all
 	mkdir -p $(install_dir)
 	cp $(bootsectors) $(install_dir)
+	cp $(listfiles) $(install_dir)
 
 $(V).SILENT:
